checking in doc - completed results section

--- a/analysis/Untitled1.ipynb
+++ b/analysis/Untitled1.ipynb
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3f5bde81",
+   "id": "eb640336",
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "22596bde",
+   "id": "829c8483",
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "67f93449",
+   "id": "092adc61",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc33459e",
+   "id": "9b0ee748",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a420f50f",
+   "id": "f76f9a2f",
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7691b80e",
+   "id": "55e6296e",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "127efd13",
+   "id": "100f7dec",
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fb4f3af5",
+   "id": "9ae84abc",
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3d7fff0d",
+   "id": "76c8a311",
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b1fe2f44",
+   "id": "4020959d",
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a47e1b",
+   "id": "96d03df5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "580a81c6",
+   "id": "90c1fcbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fe5fcc0",
+   "id": "6efc222c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c05a7eb",
+   "id": "69e0087b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,28 +1533,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9e172868",
+   "execution_count": 27,
+   "id": "acbe3b3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_iota_small_grouped = df_iota_small.groupby(\"packet_size_bytes\").mean()"
+    "df_iota_small_grouped_mean = df_iota_small.groupby(\"packet_size_bytes\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2a74b09d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>same_auth_sub</th>\n",
+       "      <th>local_pow</th>\n",
+       "      <th>timeToSync</th>\n",
+       "      <th>timeToReceiveMessage</th>\n",
+       "      <th>total_RTT</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>packet_size_bytes</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.649170e+12</td>\n",
+       "      <td>0.928571</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>427.692857</td>\n",
+       "      <td>3356.400000</td>\n",
+       "      <td>3784.092857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.649194e+12</td>\n",
+       "      <td>0.932836</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>366.708955</td>\n",
+       "      <td>3414.671642</td>\n",
+       "      <td>3781.380597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1.649498e+12</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>271.610000</td>\n",
+       "      <td>3266.740000</td>\n",
+       "      <td>3538.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1.649599e+12</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>282.788889</td>\n",
+       "      <td>3383.888889</td>\n",
+       "      <td>3666.677778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>1.649682e+12</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>313.256637</td>\n",
+       "      <td>3715.530973</td>\n",
+       "      <td>4028.787611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>1.649892e+12</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>343.920000</td>\n",
+       "      <td>9604.660000</td>\n",
+       "      <td>9948.580000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>1.649892e+12</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>348.060000</td>\n",
+       "      <td>9038.500000</td>\n",
+       "      <td>9386.560000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>1.649892e+12</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>335.760000</td>\n",
+       "      <td>9667.460000</td>\n",
+       "      <td>10003.220000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>1.649892e+12</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>334.893617</td>\n",
+       "      <td>12460.425532</td>\n",
+       "      <td>12795.319149</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       datetime  same_auth_sub  local_pow  timeToSync  \\\n",
+       "packet_size_bytes                                                       \n",
+       "2                  1.649170e+12       0.928571        0.0  427.692857   \n",
+       "4                  1.649194e+12       0.932836        0.0  366.708955   \n",
+       "8                  1.649498e+12       1.000000        0.0  271.610000   \n",
+       "16                 1.649599e+12       1.000000        0.0  282.788889   \n",
+       "32                 1.649682e+12       1.000000        0.0  313.256637   \n",
+       "64                 1.649892e+12       1.000000        0.0  343.920000   \n",
+       "128                1.649892e+12       1.000000        0.0  348.060000   \n",
+       "256                1.649892e+12       1.000000        0.0  335.760000   \n",
+       "512                1.649892e+12       1.000000        0.0  334.893617   \n",
+       "\n",
+       "                   timeToReceiveMessage     total_RTT  \n",
+       "packet_size_bytes                                      \n",
+       "2                           3356.400000   3784.092857  \n",
+       "4                           3414.671642   3781.380597  \n",
+       "8                           3266.740000   3538.350000  \n",
+       "16                          3383.888889   3666.677778  \n",
+       "32                          3715.530973   4028.787611  \n",
+       "64                          9604.660000   9948.580000  \n",
+       "128                         9038.500000   9386.560000  \n",
+       "256                         9667.460000  10003.220000  \n",
+       "512                        12460.425532  12795.319149  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_iota_small_grouped_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "361e8936",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>timeToReceiveMessage</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>packet_size_bytes</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>1.649894e+12</td>\n",
+       "      <td>140.566667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>1.649894e+12</td>\n",
+       "      <td>140.966667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>600</th>\n",
+       "      <td>1.649894e+12</td>\n",
+       "      <td>141.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>800</th>\n",
+       "      <td>1.649894e+12</td>\n",
+       "      <td>140.266667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>1.649894e+12</td>\n",
+       "      <td>153.071429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1200</th>\n",
+       "      <td>1.649895e+12</td>\n",
+       "      <td>124.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1400</th>\n",
+       "      <td>1.649895e+12</td>\n",
+       "      <td>119.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1600</th>\n",
+       "      <td>1.649895e+12</td>\n",
+       "      <td>117.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800</th>\n",
+       "      <td>1.649895e+12</td>\n",
+       "      <td>121.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>1.649148e+12</td>\n",
+       "      <td>129.179775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4000</th>\n",
+       "      <td>1.649064e+12</td>\n",
+       "      <td>183.075000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8000</th>\n",
+       "      <td>1.649064e+12</td>\n",
+       "      <td>194.950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16000</th>\n",
+       "      <td>1.649064e+12</td>\n",
+       "      <td>250.850000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32000</th>\n",
+       "      <td>1.649064e+12</td>\n",
+       "      <td>322.916667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       datetime  timeToReceiveMessage\n",
+       "packet_size_bytes                                    \n",
+       "200                1.649894e+12            140.566667\n",
+       "400                1.649894e+12            140.966667\n",
+       "600                1.649894e+12            141.333333\n",
+       "800                1.649894e+12            140.266667\n",
+       "1000               1.649894e+12            153.071429\n",
+       "1200               1.649895e+12            124.900000\n",
+       "1400               1.649895e+12            119.100000\n",
+       "1600               1.649895e+12            117.600000\n",
+       "1800               1.649895e+12            121.900000\n",
+       "2000               1.649148e+12            129.179775\n",
+       "4000               1.649064e+12            183.075000\n",
+       "8000               1.649064e+12            194.950000\n",
+       "16000              1.649064e+12            250.850000\n",
+       "32000              1.649064e+12            322.916667"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_node_grouped_mean = df_node.groupby(\"packet_size_bytes\").mean()\n",
+    "df_node_grouped_mean"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8096306a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_iota_small_grouped"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f77e363",
+   "id": "7c4afc66",
    "metadata": {},
    "outputs": [],
    "source": []
